--- a/index-parax.html
+++ b/index-parax.html
@@ -1,67 +1,100 @@
 <!DOCTYPE html>
-<html>
 <head>
-  <link href="porfolio-parax.css" type="text/css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=Cinzel|Libre+Baskerville" rel="stylesheet"/>
-
-<title>Lisa Dan's Portfolio Page</title>
+  <title>Lisa Dan</title>
+  <meta charset="utf-8">
+  <link href="portfolio-parax.css" type="text/css" rel="stylesheet"/>
+ <link href="https://fonts.googleapis.com/css?family=Cinzel|EB+Garamond" rel="stylesheet"/>
 </head>
 <body>
 
-
 <div class="pax1">
+  <!-- a id="home"> figure out how to get rid of the spacing this creates because I want it to go to the very top of the page. Can I make it 'hidden'?  UGH -->
+ <div class="navbar-container">
 
-  <div class="navbar-container">
-  <ul>
-    <li><a id="#">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="contact">Contact</a></li>
-  </ul>
-
+   <ul>
+     <li><a href="#home">Home</a></li>
+     <li><a href="#about">About</a></li>
+     <li><a href="#projects">Projects</a></li>
+     <li><a href="#social">Social Media</a></li>
+     <li><a href="#contact">Contact</a></li>
+   </ul>
+ </div>
 </div>
 
-</div>
-<
 <div class="flex-item">
 
-<h1>Lisa Dan</h1>
-<h2>Front-End Web Developer in Training</h2>
+   <h1>Lisa Dan</h1>
+   <h2>Front-End Web Developer in Training</h2>
+   <h3>Coder | Crocheter | Cat Person</h3>
 </div>
 
+<div class="pax2"></div>
+ <div class="flex-item">
+   <h2><a id="about"></a>About</h2>
+ </div>
 
-
-
-  <div class="pax2"></div>
-  <div class="about">
-    <h2><a id="about"></a>About</h2>
-    <h3>Coder | Crocheter | Creative | Cat Person</h3>
-  </div>
-<!--
-  <p>
-  <h3><a id="projects"></a>Projects</h3>
-  </p>
--->
-  <div class="projects">
-
-      <ul>
-        <li><a href="../tribute/index.html">Tribute Page</a></li>
-        <li><a href="#">Project 2 <br /><img src="#" alt="placeholder"/></a></li>
-        <li><a href="#">Project 3 <br /><img src="#" alt="placeholder"/></a></li>
-        <li><a href="#">Project 4 <br /><img src="#" alt="placeholder"/></a></li>
-      </ul>
-  </div>
+<div class="about">
+    <p>It all started with a search for cat-safe plants. When I have enough knowledge, I plan on creating a website that will list all cat-safe houseplants, be searchable, and have large photos which will make identification of plants easy when out and about plant shopping. This means a well-written and designed mobile site, as well as desktop. Care instructions will be included too!  I have big ideas for this project and I know it will be something to be proud of once it's completed. </p>
+    <p>Once upon a time, somewhere around 14 years ago, I was a contractor for a large computer company. There I did some sysadmin and hardware work, but I had the most fun doing HTML, XML and XSLT in their webmasters department. I stopped doing that work for a multitude of reasons, and as you can probably figure out, my knowledge is <span class="i">very</span> outdated. The web and it's technologies have come a long way! Therefore I'm currently taking Colt Steele's Web Development class at Udemy and the Web Developer class at FreeCodeCamp. I have always been interested in, and am still having fun with HTML and CSS!  I plan to study Python in depth, and will be taking Javascript classes as well.</p>
 
 
 
 
+  <p>  I have a multitude of creative outlets, from mosaic to origami to
+  cross-stitch! The one I've stuck to the most though, has been crochet.
+  I was taught how to crochet by my grandmother when I was a little girl, and I've been at it ever since.</p>
 
-<p>Before they sold out cliche keytar, disrupt tacos man bun butcher organic trust fund hashtag man braid lumbersexual authentic. VHS irony migas, lo-fi shoreditch actually godard semiotics skateboard trust fund la croix photo booth chillwave vegan franzen. YOLO mlkshk flexitarian church-key, chillwave sriracha helvetica heirloom typewriter mixtape try-hard tbh you probably haven't heard of them bespoke. Locavore four loko lomo actually 8-bit. Venmo beard kickstarter kogi copper mug meh. Copper mug tousled franzen, sartorial prism edison bulb tilde. Deep v fanny pack sriracha chicharrones, cred affogato squid keffiyeh.</p>
+  <p>I am owned by two beautiful cats, King Tut and Loki. Here's their board on <a href="https://www.pinterest.com/SingingFrog/my-cats-3/" target="_blank">Pinterest</a>.</p>
+</div>
 
-<p>Celiac af put a bird on it mlkshk gluten-free, intelligentsia lumbersexual banjo wolf. Fashion axe gluten-free hashtag drinking vinegar, austin hexagon vice tilde synth succulents tattooed narwhal irony chambray. Deep v pug gentrify fashion axe copper mug, franzen iPhone messenger bag. Brunch swag tacos 8-bit, everyday carry hoodie unicorn fashion axe. Pok pok messenger bag kinfolk cold-pressed 3 wolf moon yr kale chips everyday carry, fap tbh +1 readymade. Keffiyeh gochujang ethical +1, hashtag quinoa wayfarers. Pickled keffiyeh pop-up street art truffaut church-key, lomo distillery venmo tofu.
-    </p>
-  </div>
+<hr /> <!-- what's up with *this* thing now?? -->
+
+ <!--/div-->
+
+ <div class="flex-item">
+   <h3><a id="projects"></a>Projects</h3>
+ </div>
+
+ <div class="projects">
+   <ul>
+     <li><a href="../tribute/index.html">Tribute Page<br />
+         <img src="../tribute/images/love-heart-chocolate.jpg" alt="Chocolate heart" width="200px" height="200px"/></a></li>
+     <li><a href="#">Project 2 <br /><img src="#" alt="placeholder"/></a></li>
+     <li><a href="#">Project 3 <br /><img src="#" alt="placeholder"/></a></li>
+     <li><a href="#">Project 4 <br /><img src="#" alt="placeholder"/></a></li>
+   </ul>
+ </div>
+
+ <div class="flex-item">
+   <h3><a id="social"></a>Social Media</h3>
+ </div>
+ <div class="social-media">
+   <a href="https://codepen.io/PeanutSunday/">
+     <img src="codepen.png" height="20px" width="20px">Codepen</a>
+   <a href="https://github.com/lmi888">
+     <img src="github.png" height="20px" width="20px">GitHub</a>
+   <a href="#"><img src="fb.png" height="20px" width="20px">Facebook</a>
+ </div>
+
+ <hr />
+
+<div class="flex-item">
+   <h2>Contact</h2>
+</div>
+
+<div class="contact">
+
+
+<input type="text" id="email" placeholder="Your name">
+
+<input type="text" id="name" placeholder="Your email">
+
+<textarea name="message" placeholder="Your message"></textarea>
+<input type="submit" name="submit" value="Send"/>
+
+</div>
 
 
 </body>
 </html>
+
